Changes with Apache 1.3.23
  *) When the default of 'Group #-1' was changed to 'Group "#-1"',
     the Makefile wasn't updated to recognise the quotation marks.
     [Owen Boyle <obo@bourse.ch>]

  *) Win32: Do not allow threads to continue handling keepalive
     requests after a shutdown or restart has ben signaled.
     [Bill Stoddard]

  *) Win32: Accept OPTIONS * requests.  [Keith Wannamaker]

  *) Unixware 7.0 and later did not have a default locking
     mechanism defined.  This bug was introduced in apache 1.3.4.
     [Dean Gaudet]

  *) Prevent an Apache module from being loaded or added twice due
     to duplicate LoadModule or AddModule directives (or a missing
     ClearModuleList directive).
     [William Rowe, Brian Pane <bpane@pacbell.net>]

  *) Add checkgid app to do run-time validation of Group directive
     values which might cause the server to fall over, but which
     are syntactically correct.  [Ken Coar]

  *) NetWare: Added mod_unique_id to the project file.  
     [Brad Nicholes bnicholes@novell.com]

  *) NetWare: Fixed a link problem with mod_vhost_alias so that it
     exports the correct MODULE structure. PR 8598  
     [Brad Nicholes bnicholes@novell.com]

  *) Unix: The generated install script for binary distributions,
     install-bindist.sh, now makes DSO files executable, like
     make install.  This allows a binary distribution to work on 
     HP-UX without any manual intervention.  PR 7428  
     [Jeff Trawick]

  *) Win32: The Apache Win32 developers generally recommend that
     MaxRequestsPerChild be set to 0 to prevent the child process
     from ever recycling. However, for those that do require a 
     non-zero setting, this patch fixes a serious bug that can cause 
     an apparent 'server-hang' condition where the server stops
     responding to requests for a period of time. Prior to this
     fix, when the child process handled MaxRequestsPerChild
     connnections, the child process would stop accepting new 